--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -37,6 +37,9 @@ metadata:
                 "name": "activemq"
               }
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -56,6 +59,9 @@ metadata:
               "requireLogin": false,
               "size": 2
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -68,6 +74,9 @@ metadata:
             "addressName": "myAddress0",
             "queueName": "myQueue0",
             "routingType": "anycast"
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -78,6 +87,9 @@ metadata:
           },
           "spec": {
             "localOnly": true
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -113,6 +125,9 @@ metadata:
                 "name": "activemq"
               }
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -126,6 +141,9 @@ metadata:
               "image": "placeholder",
               "size": 2
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -138,6 +156,9 @@ metadata:
             "addressName": "myAddress0",
             "queueName": "myQueue0",
             "routingType": "anycast"
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -148,6 +169,9 @@ metadata:
           },
           "spec": {
             "localOnly": true
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -161,6 +185,9 @@ metadata:
               "image": "placeholder",
               "size": 2
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -173,6 +200,9 @@ metadata:
             "addressName": "myAddress0",
             "queueName": "myQueue0",
             "routingType": "anycast"
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -186,6 +216,9 @@ metadata:
               "image": "placeholder",
               "size": 2
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -198,6 +231,9 @@ metadata:
             "addressName": "myAddress0",
             "queueName": "myQueue0",
             "routingType": "anycast"
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -211,6 +247,9 @@ metadata:
               "image": "placeholder",
               "size": 2
             }
+          },
+          "status": {
+            "conditions": []
           }
         },
         {
@@ -224,6 +263,9 @@ metadata:
               "image": "placeholder",
               "size": 2
             }
+          },
+          "status": {
+            "conditions": []
           }
         }
       ]
@@ -427,6 +469,13 @@ spec:
         path: user
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:text
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v1beta1
     - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
         API
@@ -437,6 +486,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha1
     - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
         API
@@ -447,6 +503,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha2
     - description: ActiveMQArtemisAddress is the Schema for the activemqartemisaddresses
         API
@@ -457,6 +520,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha3
     - description: A stateful deployment of one or more brokers
       displayName: ActiveMQ Artemis
@@ -1514,6 +1584,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha1
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
@@ -1523,6 +1600,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha2
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
@@ -1532,6 +1616,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha3
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
@@ -1541,6 +1632,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha4
     - description: ActiveMQArtemis is the Schema for the activemqartemises API
       displayName: Active MQArtemis
@@ -1550,6 +1648,13 @@ spec:
       - kind: Secret
         name: ""
         version: v1
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha5
     - description: Provides message migration on clustered broker scaledown
       displayName: ActiveMQ Artemis Scaledown
@@ -1570,6 +1675,13 @@ spec:
         path: resources
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:resourceRequirements
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v1beta1
     - description: ActiveMQArtemisScaledown is the Schema for the activemqartemisscaledowns
         API
@@ -1586,6 +1698,13 @@ spec:
         path: localOnly
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v2alpha1
     - description: Security configuration for the broker
       displayName: ActiveMQ Artemis Security
@@ -2108,6 +2227,13 @@ spec:
       - description: The roles allowed to login hawtio
         displayName: Hawtio Roles
         path: securitySettings.management.hawtioRoles
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v1alpha1
     - description: Security configuration for the broker
       displayName: ActiveMQ Artemis Security
@@ -2640,6 +2766,13 @@ spec:
       - description: The roles allowed to login hawtio
         displayName: Hawtio Roles
         path: securitySettings.management.hawtioRoles
+      statusDescriptors:
+      - description: Current state of the resource Conditions represent the latest
+          available observations of an object's state
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
       version: v1beta1
   description: ArtemisCloud Operator manages ActiveMQ Artemis messaging broker in
     the cloud
@@ -3061,6 +3194,7 @@ spec:
   - email: rkieley@redhat.com
     name: Roderick Kieley
   maturity: beta
+  minKubeVersion: 1.20.0
   provider:
     name: ArtemisCloud
     url: https://artemiscloud.io
